clang/test/BSC/Negative/OwnedStruct/paramlist.cbs
// RUN: %clang_cc1 -verify %s

owned struct A {
    int a;
    int f(A this) { return this.a; } // expected-error {{memory leak because temporary variable 'this' is owned or indirect owned type, please fix it}}
    int g(A this);
};

int A::q(int b, A* this); // expected-error {{'this' cannot be the name of a parameter}}

int A::o(int* this); // expected-error {{type of parameter 'this' is wrong, expected 'This*' or 'This' or 'owned struct A*' or 'owned struct A', but found 'int *'}}